<resources>
    <string name="app_name">PassKeeper</string>

    <!-- Pincode Activity -->
    <string name="del_btn">Del</string>
    <string name="clr_btn">Clr</string>
    <string name="menu_forgot_pass">Forgot password</string>
    <string name="menu_help">Help</string>
    <string name="login_btn">Login</string>
    <string name="pincode_TextView">Pincode</string>
    <string name="secret_TextView">Secret</string>
    <string name="forgot_pass_text">Type your secret please</string>
    <string name="change_your_pin">You need change your pin</string>
    <string name="your_secret_incorrect">Your secret password is incorrect</string>
    <string name="cant_help">I afraid, i can\'t help if you forgot your pincode and secret :(
        You can reinstall app, and remember two important password for all other.</string>
    <string name="login_failed">Login failed</string>

    <!--Pass List Activity -->
    <string name="powered">HazelHunt</string>
    <string name="add_new">Add new</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="urlText">Url</string>
    <string name="emailText">Email</string>
    <string name="loginText">Login</string>
    <string name="passText">Password</string>
    <string name="saveBtn">Save</string>
    <string name="accInfoText">Account Information</string>
    <string name="extraText">Extra</string>
    <string name="alertPassData">Please fill in the fields Url, Email, Login and Password!</string>
    <string name="alertInformation">Information</string>
    <string name="alertCreateAcc">Create account</string>

    <!-- SettingsActivity -->
    <string name="change_pin">Change PIN</string>
    <string name="change_theme">Change theme</string>
    <string name="alertSettings">Please entry your secret</string>
    <string name="cancel">Cancel</string>
    <string name="alertFailSecret">Fail secret, please try again</string>
    <string name="change_secret">Change secret</string>
    <string name="deleteAllData">Delete all data from app</string>
    <string name="toast_settings">All changes saved</string>
    <string-array name="themes">
        <item name="light_theme">Light</item>
        <item name="dark_theme">Dark</item>
    </string-array>

    <!-- AboutActivity -->
    <string name="born_year">2016</string>
    <string name="ok_btn">Ok</string>
    <string name="off_site">Official site: pk-hazelhunt.rhcloud.com</string>
    <string name="app_version">Version 1.0</string>
    <string name="synchro">Synchronize</string>
    <string name="synchronized_text">Synchronized</string>
    <string name="synchro_with_cloud">Synchronize with\npk-hazelhunt.rhcloud.com</string>
    <string name="user_not_found">User not found!</string>
    <string name="enable_internet">Connection missing please enable</string>

</resources>
