<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/menuAddNew"
            android:title="@string/add_new"
            android:icon="@drawable/ic_action_content_add_circle_outline"
            />

        <item
            android:id="@+id/menuSettings"
            android:title="@string/settings"
            android:icon="@drawable/ic_action_action_settings"
            />

        <item
            android:id="@+id/menuSynchronize"
            android:title="@string/synchro"
            android:icon="@drawable/ic_action_notification_sync"
            />

        <item
            android:id="@+id/menuAbout"
            android:title="@string/about"
            android:icon="@drawable/ic_action_action_info_outline"
            />

        <item
            android:id="@+id/menuExit"
            android:title="@string/exit"
            android:icon="@drawable/ic_action_action_exit_to_app"
            />

</menu>