<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textAllCaps="true"
        style="@style/RobotoTextViewStyle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_version"
        android:textSize="20sp"
        android:textColor="@color/JustWhiteColor"
        style="@style/RobotoTextViewStyle"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="@string/powered"
            android:textSize="20sp"
            android:textColor="@color/JustWhiteColor"
            style="@style/RobotoTextViewStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/born_year"
            android:textSize="20sp"
            android:textColor="@color/JustWhiteColor"
            style="@style/RobotoTextViewStyle"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/off_site"
        android:textSize="20sp"
        android:textColor="@color/JustWhiteColor"
        style="@style/RobotoTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="bottom">

    <Button
        android:id="@+id/aboutOkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok_btn"
        style="@style/Buttons"/>

    </LinearLayout>

</LinearLayout>