<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/synchro_with_cloud"
        android:textSize="25sp"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailText"
        android:textSize="30sp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/cloudEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passText"
        android:textSize="30sp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/cloudPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:inputType="textPassword"/>

</LinearLayout>