<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/change_pin"
        android:textSize="20sp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/changePinEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        style="@style/RobotoTextViewStyle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/change_secret"
        android:textSize="20sp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/changeSecretEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        style="@style/RobotoTextViewStyle"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatCheckedTextView
            android:id="@+id/deleteAllDataCheckedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:text="@string/deleteAllData"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            style="?android:listSeparatorTextViewStyle"/>

        <Button
              android:id="@+id/settingsButton"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="5dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:text="@string/saveBtn"
              android:background="@drawable/button_state"/>

    </LinearLayout>

</LinearLayout>